--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ WTForms==3.1.1
 Werkzeug==3.0.1
 SQLAlchemy==2.0.23
 reportlab==4.0.7
-Pillow==10.2.0
+Pillow==9.5.0
 gunicorn==21.2.0
 python-dotenv==1.0.0
 email-validator==1.3.1
-
+pytz
