--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+pytz
+setuptools
+wheel
 Flask==3.0.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
@@ -11,4 +14,3 @@ Pillow==9.5.0
 gunicorn==21.2.0
 python-dotenv==1.0.0
 email-validator==1.3.1
-pytz
